--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -1,6 +1,6 @@
 <ul class="nav nav-pills">
-  <li ng-repeat="tab in tabs" ng-class="{ active: isTabActive(tab), disabled: tab.disabled }">
-    <a href="" ng-click="selectTab(tab)">{{ tab.title }}</a>
+  <li ng-repeat="tab in tabs" ng-class="{ active: ctrl.isTabActive(tab), disabled: tab.disabled }">
+    <a href="" ng-click="ctrl.selectTab(tab)">{{ tab.title }}</a>
   </li>
 </ul>
 
