--- a/app/templates/page-selector.html
+++ b/app/templates/page-selector.html
@@ -1,8 +1,14 @@
 <ul class="pagination">
-  <li><a href="">&laquo;</a></li>
-  <li ng-repeat="page in ctrl.getPages()" ng-class="{ active: ctrl.isPageActive(page) }">
-    <a href="" ng-click="ctrl.changePage(page)">{{ page }}</a>
+  <li ng-class="{ disabled: isPageActive(1) }">
+    <a href="" ng-click="triggerPageChange(current - 1)">&laquo;</a>
   </li>
-  <li><a href="">&raquo;</a></li>
+  
+  <li ng-repeat="page in pages" ng-class="{ active: isPageActive(page) }">
+    <a href="" ng-click="triggerPageChange(page)">{{ page }}</a>
+  </li>
+  
+  <li ng-class="{ disabled: isPageActive(max) }">
+    <a href="" ng-click="triggerPageChange(current + 1)">&raquo;</a>
+  </li>
   <!-- classes utiles : active, disabled -->
 </ul>
