Utilisation du thème Lumen de Bootswatch

--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -1,10 +1,13 @@
-// Importation Twitter Bootstrap
-
-// Styles issus de Bootstrap
+// Bootstrap
 @import "../../bower_components/bootstrap/less/bootstrap.less";
-@import "../../bower_components/bootstrap/less/theme.less";
 
-// Les variables sont déclarées après l'import de Bootstrap, afin
+// Bootswatch
+
+@import "../../bower_components/bootswatch/lumen/bootswatch.less";
+@import "../../bower_components/bootswatch/lumen/variables.less";
+
+
+// Les variables sont déclarées après l'import de Bootstrap et Bootswatch, afin
 // d'éviter que l'import écrase des variables déjà déclarées.
 
 // Modifier l'URL de base des fontes
