--- a/app/styles/events.less
+++ b/app/styles/events.less
@@ -7,7 +7,7 @@ ul#events {
   
   li.ng-enter {
     transition: all 2s;
-    background-color: red;
+    background-color: @brand-warning;
   }
 
 }
