--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -16,7 +16,7 @@
 
 // Styles perso
 
-@import "ng-cloak.css";
+@import (inline) "ng-cloak.css";
 @import "base.less";
 @import "events.less";
 @import "tree.less";
