Abandon de Bootswatch pour utiliser Bootstrap 3.3.x

--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -1,13 +1,8 @@
 // Bootstrap
 @import "../../bower_components/bootstrap/less/bootstrap.less";
 
-// Bootswatch
 
-@import "../../bower_components/bootswatch/lumen/bootswatch.less";
-@import "../../bower_components/bootswatch/lumen/variables.less";
-
-
-// Les variables sont déclarées après l'import de Bootstrap et Bootswatch, afin
+// Les variables sont déclarées après l'import de Bootstrap, afin
 // d'éviter que l'import écrase des variables déjà déclarées.
 
 // Modifier l'URL de base des fontes
